# prosa

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: auto-merge.yaml  ci.yaml  docs.yaml
openapi/: compose.yaml  openapi.yaml
openapi/components/examples/: Metadata.yaml
openapi/components/parameters/: annotation_id.yaml  book_id.yaml  key_id.yaml  shelf_id.yaml  user_id.yaml  username.yaml
openapi/components/responses/: BadRequest.yaml  Conflict.yaml  Forbidden.yaml  NotFound.yaml  Unauthorized.yaml
openapi/components/schemas/: Annotation.yaml  AnnotationRequest.yaml  ApiKey.yaml  BookDetails.yaml  BookFileMetadata.yaml  BookState.yaml  Capability.yaml  Contributor.yaml  Metadata.yaml  MetadataRequest.yaml  MetadataRequestStatus.yaml  Preferences.yaml  Provider.yaml  RequiredBookState.yaml  SearchResult.yaml  Series.yaml  ShelfSearchResult.yaml  Sync.yaml
openapi/paths/: books.yaml  metadata-requests.yaml  shelves.yaml  sync.yaml  users.yaml
openapi/paths/auth/: login.yaml  logout.yaml  refresh.yaml  register.yaml
openapi/paths/books/: {book_id}.yaml
openapi/paths/shelves/: {shelf_id}.yaml
openapi/paths/users/: {user_id}.yaml
src/: main.rs
src/app/: error.rs  mod.rs  server.rs  tracing.rs
src/app/annotations/: controller.rs  data.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/authentication/: controller.rs  data.rs  middleware.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/authorization/: annotations.rs  books.rs  metadata.rs  middleware.rs  mod.rs  shelves.rs  sync.rs  users.rs
src/app/books/: controller.rs  data.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/concurrency/: manager.rs
src/app/core/: healtcheck.rs  mod.rs  utils.rs
src/app/covers/: controller.rs  data.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/epubs/: data.rs  mod.rs  models.rs  repository.rs  service.rs
src/app/metadata/: controller.rs  data.rs  handlers.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/shelves/: controller.rs  data.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/state/: controller.rs  data.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/app/sync/: controller.rs  (+7 more)
src/config/: config.rs  default.toml  example.toml
src/database/: database.rs  mod.rs  seed.rs  tables.rs
src/metadata_manager/: fetcher.rs  manager.rs  mod.rs
tests/: eslint.config.cjs  jest.config.js  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json
tests/books/: The_Great_Gatsby.epub
tests/config/: .env
tests/covers/: This_is_not_a_cover.txt
tests/integration/: annotations.test.ts  auth.tests.ts  authentication.test.ts  books.test.ts  core.test.ts  covers.test.ts  metadata.test.ts  server.test.ts  shelves.test.ts  state.test.ts  sync.test.ts  users.test.ts
tests/utils/: annotations.ts  authentication.ts  books.ts  common.ts  core.ts  covers.ts  metadata.ts  shelves.ts  state.ts  sync.ts  users.ts
(+53 files in other folders)
