[package]
name = "prosa"
version = "0.1.0"
edition = "2024"
publish = false
include = ["src/**/*"]
license = "MIT"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["multipart"] }
axum_typed_multipart = "0.16.4"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.15"
epub = "2.1.4"
goodreads-metadata-scraper = "0.2.4"
image = "0.25.8"
jsonwebtoken = { version = "9.3.1", default-features = false }
log = "0.4.28"
merge = "0.2.0"
quick_cache = "0.6.15"
regex = "1.11.2"
serde = "1.0.219"
serde_json = "1.0.141"
serde_with = "3.14.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "chrono"] }
ureq = "3.1.2"
uuid = { version = "1.18.1", features = ["v4"] }
