[package]
name = "prosa"
version = "0.1.0"
edition = "2024"
publish = false
include = ["src/**/*"]
license = "MIT"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
axum_typed_multipart = "0.16.5"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
epub = "2.1.5"
goodreads-metadata-scraper = "0.2.4"
image = "0.25.9"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["aws_lc_rs"] }
log = "0.4.29"
merge = "0.2.0"
quick_cache = "0.6.18"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.148"
serde_with = "3.16.1"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter", "chrono"] }
ureq = "3.1.4"
uuid = { version = "1.19.0", features = ["v4"] }
